--- a/web/web.css
+++ b/web/web.css
@@ -1,5 +1,5 @@
 body {
-  background-color: black;
+  background-color: darkslategray;
   color: white;
   font-family: "Verdana", "Lucidia Console";
 }
